--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Help and Support</title>
+    <title>Help and Support | OCBC Singapore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
